k8s-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-rest-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: minio-rest-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-rest-api
  labels:
    app: minio-rest-api
spec:
  selector:
    matchLabels:
      app: minio-rest-api
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: minio-rest-api
    spec:
      containers:
        - name: minio-rest-api
          image: maxmorev/minio-rest-api:latest
          ports:
            - containerPort: 8080
              name: springboot
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m" # 1/4 core
            limits:
              memory: "512Mi"
              cpu: "500m" # 1 core
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 3
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
