minio-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-srv
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio-srv

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-srv
  labels:
    app: minio-srv
spec:
  selector:
    matchLabels:
      app: minio-srv
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: minio-srv
    spec:
      volumes:
        - name: minio-volume
          persistentVolumeClaim:
            claimName: minio-pvc
      containers:
        - name: minio-srv
          image: minio/minio
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
              name: minio
          volumeMounts:
            - name: minio-volume
              mountPath: "/data"
          resources:
            requests:
              memory: "512Mi"
              cpu: "512m" # 1/2 core
            limits:
              memory: "512Mi"
              cpu: "1000m" # 1
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
          # Liveness probe detects situations where MinIO server instance
          # is not working properly and needs restart. Kubernetes automatically
          # restarts the pods if liveness checks fail.
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
