ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - io.titsonfire.store
        - echo2.titsonfire.store
      secretName: echo-tls
  rules:
    - host: io.titsonfire.store
      http:
        paths:
          - backend:
              serviceName: minio-rest-api
              servicePort: 8080
    - host: echo2.titsonfire.store
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
